# falco-plugin-rs

./: .gitignore  Cargo.toml  OWNERS  README.md  justfile
falco_event/: Cargo.toml  README.md
falco_event/api/: flag_types  ppm_events_public.h
falco_event/src/: dynamic_params.rs  event_field_type.rs  event_flags.rs  ffi.rs  from_bytes.rs  lib.rs  metadata.rs  payload.rs  raw_event.rs  type_id.rs
falco_event/src/events/: event.rs  metadata.rs  mod.rs  payload.rs  raw_event.rs  serde_tests.rs  tests.rs  to_bytes.rs  types.rs  types_minimal.rs
falco_event/src/fields/: dynamic_params.rs  event_flags.rs  from_bytes.rs  mod.rs  to_bytes.rs  type_id.rs  types.rs
falco_event/src/types/: bytebuf.rs  fd_list.rs  format.rs  mod.rs  owned.rs  utf_chunked.rs
falco_event/src/types/format/: bytebuf.rs  cstr.rs  mod.rs  option.rs
falco_event/src/types/net/: endpoint.rs  ipaddr.rs  ipnet.rs  ipv4addr.rs  ipv4net.rs  ipv6addr.rs  ipv6net.rs  mod.rs  sockaddr.rs  socktuple.rs
falco_event/src/types/path/: absolute_path.rs  mod.rs  relative_path.rs
falco_event/src/types/primitive/: bool.rs  integers.rs  mod.rs  newtypes.rs
falco_event/src/types/string/: cstr.rs  cstr_array.rs  cstr_pair_array.rs  mod.rs
falco_event/src/types/time/: duration.rs  mod.rs  system_time.rs
falco_event/tools/: generate_dynamic_param_table.sh  generate_event_table.sh  generate_flags_table.sh
falco_event_derive/: Cargo.toml  README.md
falco_event_derive/src/: any_event.rs  binary_payload.rs  dynamic_params.rs  event_flags.rs  event_info.rs  format.rs  helpers.rs  lib.rs  serde_custom.rs
falco_event_schema/: Cargo.toml  README.md
falco_event_schema/api/: flag_types  ppm_events_public.h
falco_event_schema/src/: events.rs  ffi.rs  lib.rs  tests.rs
falco_event_schema/src/fields/: dynamic_params.rs  event_flags.rs  mod.rs  types.rs
falco_event_schema/src/types/: fd_list.rs  mod.rs
falco_event_schema/src/types/net/: mod.rs  sockaddr.rs  socktuple.rs
falco_event_schema/tools/: generate_dynamic_param_table.sh  generate_event_table.sh  generate_flags_table.sh
falco_event_serde/: Cargo.toml
falco_event_serde/src/: lib.rs
falco_event_serde/src/de/: events.rs  mod.rs  payload.rs
falco_event_serde/src/de/repr/: dynamic_params.rs  fd_list.rs  flags.rs  integers.rs  mod.rs  net.rs  newtypes.rs  strings.rs  time.rs
falco_event_serde/src/ser/: mod.rs  payload.rs
falco_event_serde/src/ser/field/: dynamic_params.rs  fd_list.rs  flags.rs  integers.rs  mod.rs  net.rs  newtypes.rs  option.rs  strings.rs  time.rs
falco_event_serde/tests/: basic.rs  dynamic_params.rs  fd_list.rs  flags.rs  sockaddr.rs  socktuple.rs  strings.rs
falco_plugin/: Cargo.toml  README.md
falco_plugin/examples/: async_plugin.rs  dummy_source.rs  extract2_plugin.rs  extract_plugin.rs  extract_plugin_derive.rs  extract_plugin_typed.rs  extract_plugin_typed_no_tag.rs  parse_plugin.rs  source_plugin.rs  static_source_plugin.rs
falco_plugin/src/: lib.rs
falco_plugin/src/base/: schema.rs
falco_plugin/src/plugin/: error.rs  event.rs  mod.rs  schema.rs  storage.rs
falco_plugin/src/plugin/async_event/: async_handler.rs  background_task.rs  mod.rs  wrappers.rs
falco_plugin/src/plugin/base/: logger.rs  metrics.rs  mod.rs  wrappers.rs
falco_plugin/src/plugin/error/: as_result.rs  ffi_result.rs  last_error.rs  mod.rs
falco_plugin/src/plugin/event/: async_event.rs  event_input.rs  json.rs  mod.rs  plugin_event.rs
falco_plugin/src/plugin/exported_tables/: field_descriptor.rs  field_info.rs  macros.rs  metadata.rs  mod.rs  per_thread.rs  ref_shared.rs  static_field_specialization.rs  table.rs  vtable.rs  wrappers.rs
falco_plugin/src/plugin/extract/: extractor_fn.rs  fields.rs  mod.rs  schema.rs  wrappers.rs
falco_plugin/src/plugin/listen/: mod.rs  routine.rs  wrappers.rs
falco_plugin/src/plugin/parse/: mod.rs  wrappers.rs
falco_plugin/src/plugin/source/: event_batch.rs  mod.rs  open_params.rs  wrappers.rs
falco_plugin/src/plugin/tables/: data.rs  entry.rs  ffi.rs  field.rs  key.rs  macros.rs  mod.rs  runtime.rs  runtime_table_validator.rs  table.rs  table_reader.rs  vtable.rs
falco_plugin/src/strings/: cstring_writer.rs  from_ptr.rs  mod.rs  static_cstr.rs
falco_plugin_api/: Cargo.toml  README.md
falco_plugin_api/plugin/: plugin_api.h
falco_plugin_api/src/: ffi.rs  lib.rs
falco_plugin_derive/: Cargo.toml  README.md
falco_plugin_derive/src/: lib.rs
falco_plugin_runner/: Cargo.toml
falco_plugin_runner/src/: event.rs  lib.rs  tables.rs
falco_plugin_runner/src/plugin/: async_event.rs  event_source_filter.rs  extract.rs  listen.rs  mod.rs  parse.rs  source.rs
falco_plugin_tests/: Cargo.toml  build.rs
falco_plugin_tests/benches/: binary_event.rs  binary_event_all.rs  plugin_custom_tables.rs  plugin_extract_static.rs  plugin_source_batch.rs  plugin_source_parse_noop.rs  plugin_threadinfo.rs
falco_plugin_tests/c++/: sinsp_test_driver.cpp  sinsp_test_driver.h
falco_plugin_tests/src/: common.rs  fallback.rs  ffi.rs  lib.rs  native.rs
falco_plugin_tests/src/plugin_collection/: mod.rs
falco_plugin_tests/src/plugin_collection/events/: countdown.rs  mod.rs
falco_plugin_tests/src/plugin_collection/extract/: extra_fields.rs  mod.rs  nested.rs  remaining_from_payload.rs  remaining_from_table.rs  remaining_from_table_runtime.rs
falco_plugin_tests/src/plugin_collection/parse/: extra_fields.rs  mod.rs  nested_table_extra_fields.rs  remaining_into_nested_table.rs  remaining_into_table_api.rs  remaining_into_table_direct.rs
falco_plugin_tests/src/plugin_collection/source/: batched_empty_event.rs  countdown.rs  mod.rs
falco_plugin_tests/src/plugin_collection/tables/: mod.rs  (+3 more)
falco_plugin_tests/tests/: async.rs  async_tables.rs  capture_listen_resched.rs  capture_listen_run_forever.rs  dummy.rs  dummy_source.rs  dummy_source_fail.rs  dummy_source_json.rs  dummy_syscall_source.rs  extract.rs  extract_range.rs  extract_types.rs  parse.rs  parse_runtime.rs  parse_table_api.rs  parse_table_nested.rs  scap.rs  scap_import_table.rs  scap_import_table_bad_key_type.rs  source_batch.rs  source_single.rs
(+39 files in other folders)
