[workspace]
members = ["falco_plugin_api", "falco_plugin", "falco_event_derive", "falco_event", "falco_plugin_derive", "falco_plugin_tests", "falco_plugin_runner"]
resolver = "2"

[workspace.lints.rust]
# rust-2024-compatibility = "warn"
boxed-slice-into-iter = "allow"
dependency-on-unit-never-type-fallback = "allow"
deprecated-safe-2024 = "allow"
edition-2024-expr-fragment-specifier = "allow"
if-let-rescope = "allow"
impl-trait-overcaptures = "allow"
keyword-idents-2024 = "allow"
missing-unsafe-on-extern = "allow"
never-type-fallback-flowing-into-unsafe = "allow"
rust-2024-guarded-string-incompatible-syntax = "allow"
rust-2024-incompatible-pat = "allow"
rust-2024-prelude-collisions = "allow"
static-mut-refs = "allow"
tail-expr-drop-order = "allow"
unsafe-attr-outside-unsafe = "allow"
unsafe-op-in-unsafe-fn = "allow"
