[workspace]
members = ["falco_plugin_api", "falco_plugin", "falco_event_derive", "falco_event", "falco_plugin_derive", "falco_plugin_tests", "falco_plugin_runner"]
resolver = "2"

[workspace.lints.rust]
# rust-2024-compatibility = "warn"
boxed-slice-into-iter = "warn"
dependency-on-unit-never-type-fallback = "warn"
deprecated-safe-2024 = "warn"
edition-2024-expr-fragment-specifier = "allow"
if-let-rescope = "allow"
impl-trait-overcaptures = "allow"
keyword-idents-2024 = "warn"
missing-unsafe-on-extern = "warn"
never-type-fallback-flowing-into-unsafe = "warn"
rust-2024-guarded-string-incompatible-syntax = "warn"
rust-2024-incompatible-pat = "warn"
rust-2024-prelude-collisions = "warn"
static-mut-refs = "warn"
tail-expr-drop-order = "warn"
unsafe-attr-outside-unsafe = "warn"
unsafe-op-in-unsafe-fn = "allow"
