[package]
name = "falco_event"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Type-safe wrappers for Falco events"
homepage = "https://falcosecurity.github.io/plugin-sdk-rs/falco_event/"
repository = "https://github.com/falcosecurity/plugin-sdk-rs"
readme = "README.md"
keywords = ["falco", "security"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
derive_deftly = ["dep:derive-deftly"]

[dependencies]
falco_event_derive = { path = "../falco_event_derive", version = "0.4.0" }
memchr = "2.7.1"
num-derive = "0.4.2"
num-traits = "0.2.17"
thiserror = "1.0.58"
bitflags = { version = "2.4.2" }
anyhow = "1.0.81"
chrono = "0.4.38"
typed-path = "0.9.3"
derive-deftly = { version = "1.0.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }

[dev-dependencies]
hexdump = "0.1.1"
