[package]
name = "falco_event_derive"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Helper proc macros for the falco_event library"
homepage = "https://gnosek.github.io/falco-plugin-rs/falco_event_derive/"
repository = "https://github.com/gnosek/falco-plugin-rs"
readme = "README.md"
keywords = ["falco", "security"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2"