[package]
name = "falco_event_schema"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Schema definitions for Falco events"
homepage = "https://falcosecurity.github.io/plugin-sdk-rs/falco_event_schema/"
repository = "https://github.com/falcosecurity/plugin-sdk-rs"
readme = "README.md"
keywords = ["falco", "security"]

[lints]
workspace = true

[features]
derive_deftly = ["dep:derive-deftly"]

[dependencies]
bitflags = { version = "2.4.2" }
chrono = "0.4.38"
derive-deftly = { version = "1.0.1", optional = true }
falco_event = { path = "../falco_event", version = "0.5.0" }
falco_event_derive = { path = "../falco_event_derive", version = "0.5.0" }
falco_schema_derive = { path = "../falco_schema_derive", version = "0.5.0" }
typed-path = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }
