[package]
name = "falco_event_serde"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Serde support for falco_event types"
homepage = "https://falcosecurity.github.io/plugin-sdk-rs/falco_event_serde/"
repository = "https://github.com/falcosecurity/plugin-sdk-rs"
keywords = ["falco", "security"]

[dependencies]
bstr = { version = "1.12.0", features = ["serde"] }
derive-deftly = "1.0.1"
falco_event = { version = "0.5.0", path = "../falco_event" }
falco_event_schema = { version = "0.5.0", path = "../falco_event_schema", features = ["derive_deftly"] }
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.140"
