[package]
name = "falco_plugin"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "High level bindings for the Falco plugin API"
homepage = "https://gnosek.github.io/falco-plugin-rs/falco_plugin/"
repository = "https://github.com/gnosek/falco-plugin-rs"
readme = "README.md"
keywords = ["falco", "security"]
categories = ["api-bindings"]

[[example]]
name = "source_plugin"
crate-type = ["dylib"]

[[example]]
name = "static_source_plugin"
crate-type = ["staticlib"]

[[example]]
name = "extract_plugin_derive"
crate-type = ["dylib"]

[[example]]
name = "extract_plugin_typed"
crate-type = ["dylib"]

[[example]]
name = "extract_plugin_typed_no_tag"
crate-type = ["dylib"]

[[example]]
name = "parse_plugin"
crate-type = ["dylib"]

[[example]]
name = "extract2_plugin"
crate-type = ["dylib"]

[[example]]
name = "async_plugin"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
falco_event = { path = "../falco_event", version = "0.1.1" }
falco_plugin_api = { path = "../falco_plugin_api", version = "0.1.1" }
falco_plugin_derive = { path = "../falco_plugin_derive", version = "0.1.1" }
serde = "1.0.197"
serde_json = "1.0.114"
schemars = "0.8.16"
anyhow = "1.0.81"
memchr = "2.7.1"
log = { version = "0.4.21", features = ["std"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
phf = { version = "0.11.2", features = ["macros"] }
