[package]
name = "falco_plugin"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "High level bindings for the Falco plugin API"
homepage = "https://falcosecurity.github.io/plugin-sdk-rs/falco_plugin/"
repository = "https://github.com/falcosecurity/plugin-sdk-rs"
readme = "README.md"
keywords = ["falco", "security"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# RUSTFLAGS='--cfg linkage="static"' cargo rustc --crate-type=staticlib -p falco_plugin --example dummy_source
[lints.rust]
# rust-2024-compatibility = "warn"
boxed-slice-into-iter = "warn"
dependency-on-unit-never-type-fallback = "warn"
deprecated-safe-2024 = "warn"
edition-2024-expr-fragment-specifier = "allow"
if-let-rescope = "allow"
impl-trait-overcaptures = "allow"
keyword-idents-2024 = "warn"
missing-unsafe-on-extern = "warn"
never-type-fallback-flowing-into-unsafe = "warn"
rust-2024-guarded-string-incompatible-syntax = "warn"
rust-2024-incompatible-pat = "warn"
rust-2024-prelude-collisions = "warn"
static-mut-refs = "warn"
tail-expr-drop-order = "warn"
unsafe-attr-outside-unsafe = "warn"
unsafe-op-in-unsafe-fn = "allow"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(linkage, values("static"))'] }

[[example]]
name = "dummy_source"
crate-type = ["cdylib"]

[features]
thread-safe-tables = ["dep:parking_lot"]

[dependencies]
thiserror = "1.0.58"
falco_event = { path = "../falco_event", version = "0.4.0" }
falco_plugin_api = { path = "../falco_plugin_api", version = "0.4.0" }
falco_plugin_derive = { path = "../falco_plugin_derive", version = "0.4.0" }
serde = "1.0.197"
serde_json = "1.0.114"
schemars = "0.8.16"
anyhow = "1.0.81"
memchr = "2.7.1"
log = { version = "0.4.21", features = ["std"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
phf = { version = "0.11.2", features = ["macros"] }
lock_api = { version = "0.4.12", features = ["arc_lock"] }
refcell-lock-api = "0.1.0"
parking_lot = { version = "0.12.3", optional = true, features = ["arc_lock"] }
bumpalo = { version = "3.16.0", features = ["collections", "std"] }
