[package]
name = "falco_plugin_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cargo install cargo-commander
# cargo cmd regen_bindings
[package.metadata.commands.regen_bindings.command]
cmd = [
    "wget https://raw.githubusercontent.com/falcosecurity/libs/master/userspace/plugin/plugin_types.h -O plugin/plugin_types.h",
    "wget https://raw.githubusercontent.com/falcosecurity/libs/master/userspace/plugin/plugin_api.h -O plugin/plugin_api.h",
    "bindgen plugin/plugin_api.h --no-debug 'ss_plugin_table_info|ss_plugin_table_fieldinfo' -- -I. > src/ffi.rs"]
working_dir = "."
