[package]
name = "falco_plugin_derive"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for the falco_plugin library"
homepage = "https://falcosecurity.github.io/plugin-sdk-rs/falco_plugin_derive/"
repository = "https://github.com/falcosecurity/plugin-sdk-rs"
readme = "README.md"
keywords = ["falco", "security"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0.86"
syn = "2.0.71"
