[package]
name = "falco_plugin_runner"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Pure-Rust runner for Falco plugins"
homepage = "https://falcosecurity.github.io/plugin-sdk-rs/falco_plugin_api/"
repository = "https://github.com/falcosecurity/plugin-sdk-rs"
keywords = ["falco", "security"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.89"
falco_event = { version = "0.4.0", path = "../falco_event" }
falco_plugin_api = { version = "0.4.0", path = "../falco_plugin_api" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
falco_plugin = { path = "../falco_plugin" }
