[package]
name = "falco_plugin_tests"
version = "0.4.0"
edition = "2021"
publish = false

[package.metadata."docs.rs"]
all-features = true

[dependencies]
anyhow = "1.0.88"
cxx = { version = "1.0.124", features = ["c++17"] }
falco_plugin = { version = "0.4.0", path = "../falco_plugin", features = ["thread-safe-tables", "full-schema"] }
falco_plugin_runner = { version = "0.4.0", path = "../falco_plugin_runner" }
log = "0.4.22"

[build-dependencies]
cxx-build = "1.0.124"
pkg-config = "0.3.30"
