[package]
name = "falco_plugin_tests"
version = "0.4.0"
edition = "2021"
publish = false

[lints]
workspace = true

[[bench]]
name = "binary_event"
harness = false

[[bench]]
name = "binary_event_all"
harness = false

[[bench]]
name = "plugin_source_batch"
harness = false

[[bench]]
name = "plugin_source_parse_noop"
harness = false

[[bench]]
name = "plugin_custom_tables"
harness = false

[[bench]]
name = "plugin_extract_static"
harness = false

[[bench]]
name = "plugin_threadinfo"
harness = false

[dependencies]
anyhow = "1.0.88"
cxx = { version = "1.0.124", features = ["c++17"] }
falco_plugin = { version = "0.4.0", path = "../falco_plugin", features = ["thread-safe-tables"] }
falco_plugin_runner = { version = "0.4.0", path = "../falco_plugin_runner" }
log = "0.4.22"
typed-path = "0.9.3"
paste = "1.0.15"
c_str_macro = "1.0.3"

[build-dependencies]
cxx-build = "1.0.124"
pkg-config = "0.3.30"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
